Simple component test with enzyme

--- a/src/containers/steps/steps.scss
+++ b/src/containers/steps/steps.scss
@@ -39,6 +39,10 @@
     font-weight: bold;
     color: #5a819e;
     cursor: pointer;
+    &.disabled {
+      color: #ccc;
+      border-color: #ccc;
+    }
   }
 }
 .finished {
